library/src/libqvalidator.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef struct QIntValidator QIntValidator;
typedef struct QLocale QLocale;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QObject QObject;
typedef struct QValidator QValidator;
QTLIBC_API QValidator* QValidator_new();
QTLIBC_API QValidator* QValidator_new2(QObject* parent);
QTLIBC_API QMetaObject* QValidator_MetaObject(const QValidator* self);
QTLIBC_API void* QValidator_Metacast(QValidator* self, const char* param1);
QTLIBC_API int QValidator_Metacall(QValidator* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QValidator_Tr(const char* s);
QTLIBC_API void QValidator_SetLocale(QValidator* self, QLocale* locale);
QTLIBC_API QLocale* QValidator_Locale(const QValidator* self);
QTLIBC_API int QValidator_Validate(const QValidator* self, libqt_string param1, int* param2);
QTLIBC_API void QValidator_Fixup(const QValidator* self, libqt_string param1);
void QValidator_Connect_Changed(QValidator* self, intptr_t slot);
QTLIBC_API libqt_string QValidator_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QValidator_Tr3(const char* s, const char* c, int n);
QTLIBC_API void QValidator_Delete(QValidator* self);
QTLIBC_API QIntValidator* QIntValidator_new();
QTLIBC_API QMetaObject* QIntValidator_MetaObject(const QIntValidator* self);
QTLIBC_API void* QIntValidator_Metacast(QIntValidator* self, const char* param1);
QTLIBC_API int QIntValidator_Metacall(QIntValidator* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QIntValidator_Tr(const char* s);
QTLIBC_API int QIntValidator_Validate(const QIntValidator* self, libqt_string param1, int* param2);
QTLIBC_API void QIntValidator_Fixup(const QIntValidator* self, libqt_string input);
QTLIBC_API void QIntValidator_SetBottom(QIntValidator* self, int bottom);
QTLIBC_API void QIntValidator_SetTop(QIntValidator* self, int top);
QTLIBC_API void QIntValidator_SetRange(QIntValidator* self, int bottom, int top);
QTLIBC_API int QIntValidator_Bottom(const QIntValidator* self);
QTLIBC_API int QIntValidator_Top(const QIntValidator* self);
QTLIBC_API libqt_string QIntValidator_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QIntValidator_Tr3(const char* s, const char* c, int n);
QTLIBC_API void QIntValidator_Delete(QIntValidator* self);